==> Arielmmm-1/ArkRace2026/Embedded Team/临时/NRF24L01.c <==
#include "stm32f4xx_hal.h"
#include "NRF24L01_Define.h"
#include "NRF24L01.h"
#define NRF24L01_TX_PACKET_WIDTH		32
#define NRF24L01_RX_PACKET_WIDTH		32

void NRF24L01_W_CE(uint8_t BitValue)
{
    HAL_GPIO_WritePin(GPIOA, GPIO_PIN_3, (GPIO_PinState)BitValue);
}

void NRF24L01_W_CSN(uint8_t BitValue)
{
    HAL_GPIO_WritePin(GPIOA, GPIO_PIN_4, (GPIO_PinState)BitValue);
}

void NRF24L01_W_SCK(uint8_t BitValue)
{
    HAL_GPIO_WritePin(GPIOA, GPIO_PIN_5, (GPIO_PinState)BitValue);
}

void NRF24L01_W_MOSI(uint8_t BitValue)
{
    HAL_GPIO_WritePin(GPIOA, GPIO_PIN_6, (GPIO_PinState)BitValue);
}

uint8_t NRF24L01_R_MISO(void)
{
    return HAL_GPIO_ReadPin(GPIOA, GPIO_PIN_7);
}
