==> xiaoshuaijie/msp_traction-control-car/module/NRF24L01/nrf24l01.cpp <==
#include "nrf24l01.h"
#include "nrf24l01_define.h"

void NRF24L01_W_CE(uint8_t BitValue)
{
	/*根据BitValue的值，将CE置高电平或者低电平*/	
    (BitValue!=0) ? DL_GPIO_setPins(NRF24L01_PORT,NRF24L01_CE_PIN) : DL_GPIO_clearPins(NRF24L01_PORT,NRF24L01_CE_PIN);
}

void NRF24L01_W_CSN(uint8_t BitValue)
{
	/*根据BitValue的值，将CSN置高电平或者低电平*/
    (BitValue!=0) ? DL_GPIO_setPins(NRF24L01_PORT,NRF24L01_CSN_PIN) : DL_GPIO_clearPins(NRF24L01_PORT,NRF24L01_CSN_PIN);
}

void NRF24L01_W_SCK(uint8_t BitValue)
{
	/*根据BitValue的值，将SCK置高电平或者低电平*/
    (BitValue!=0) ? DL_GPIO_setPins(NRF24L01_PORT,NRF24L01_SCK_PIN) : DL_GPIO_clearPins(NRF24L01_PORT,NRF24L01_SCK_PIN);
}

void NRF24L01_W_MOSI(uint8_t BitValue)
{
	/*根据BitValue的值，将MOSI置高电平或者低电平*/
    (BitValue!=0) ? DL_GPIO_setPins(NRF24L01_PORT,NRF24L01_MOSI_PIN) : DL_GPIO_clearPins(NRF24L01_PORT,NRF24L01_MOSI_PIN);
}

uint8_t NRF24L01_R_MISO(void)
{
	/*取MISO引脚的高低电平并返回*/
    if(DL_GPIO_readPins(NRF24L01_PORT,NRF24L01_MISO_PIN)!=0)return 1;
    else return 0;
}
